# learn-cpp

./: .bazelignore  .bazelrc  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CPPLINT.cfg  README.md  Taskfile.yaml  WORKSPACE  vcpkg.json
.github/workflows/: unittest.yaml
compiler/gcc/attribute/: alias.cc  constructor.cc
compiler/gcc/compiler/: BUILD  feature.txt  feature_test.cc  run.sh
compiler/gdb/: BUILD  container.cc
compiler/llvm/clang-tools/: BUILD  cast-matcher.cc  class-matcher.cc  main.cc  main.h  matcher.cc  output.json  run.sh
compiler/llvm/pass/: BUILD  CMakeLists.txt  README.md  hello_pass-new.cc  hello_pass.cc  main.c  pass-new.sh  pass.sh
compiler/preprocessor/: comma_in_macro.cc  predefined_macros.cc  predefined_macros_gcc.cc  replace.cc
lang/: BUILD  binary.cc  bit_field.cc  char.cc  designated-initializers.cc  destructor.cc  exceptions.cc  feature_test.cc  for.cc  operator_alternative.cc  operator_member_access.cc  reference.cc  scoped-enumerations.cc  sizeof.cc  static.cc  switch.cc
lang/attribute/: deprecated.cc  fullthrough.cc  likely.cc  noreturn.cc
lang/class/: empty_class.cc  explicit.cc  forward_declaration.md  inherit.cc  inner_class.cc
lang/declarations/: alignas.cc  alignof.cc  decltype.cc
lang/dependent_name/: template_disambiguator.cc  typename_disambiguator.cc
lang/function/: adl.cc  bind.cc  functional.cc  lambda.cc
lang/literals/: number_literal.cc  string_literal.cc  user_defined_literals.cc
lang/namespaces/: inline_namespace.cc  unnamed_namespace.cc
lang/operators/: mod.cc  overloaded_operator.cc
lang/pointer/: pointer.cc
lang/templates/: factorial.cc  funtion_alias.cc  non_type_param.cc  partial_specialization.cc  variadic_templates.cc
profiler/jemalloc/basic-allocator-statistics/: Taskfile.yaml  ex_stats_print.cc  out.txt
profiler/jemalloc/heap-profiling/: BUILD  Taskfile.yaml  main.cc  malloc.container  malloc.directly
sanitizers/: .gitignore
sanitizers/address/: BUILD  build.sh  global-buffer-overflow.cc  heap-buffer-overflow.cc  initialization-order-bugs.cc  memory-leaks.cc  process_overflow.cc  stack-buffer-overflow.cc  thread_overflow.cc  use-after-free.cc  use-after-return.cc  use-after-scope.cc
sanitizers/memory/: build.sh  uninitialized-memory-read.cc
sanitizers/thread/: BUILD  build.sh  simple_race.cc
technique/: BUILD  class_utils.h
technique/catch2_main/: main.cc
technique/coredump/: Taskfile.yaml  access-nullptr.cc  out-of-memory.cc  stack-overflow.cc  without-catching-exception.cc
technique/dlopen_plugin/: BUILD  action_service.cc
technique/dlopen_plugin/plugin/: BUILD  action.h  cat_action.cc  echo_action.cc
technique/folly/: delayed_destruction.cc  poly.cc  token_bucket.cc
technique/graceful_exit/backgroud_thread/: BUILD  solution.cc
technique/hook/alias/: BUILD  alias.cc  alias.h  main.cc
technique/hook/preload/: BUILD  README.md  main.cc  malloc.c  run.sh  time-init.c
technique/hook/special-if/: BUILD  README.md  bind.c
technique/init_order/: BUILD  lib.cc  lib.h  main.cc
technique/judge_main_thread/: BUILD  solution.cc
technique/libc/: eventfd.cc  fcntl.cc  pipe.cc  timerfd.cc  timerfd.md
technique/libc/simd/: BUILD  sse_avx.cc
technique/libc/syscall/: gettid.cc
technique/pmap/: BUILD  asm.cc  case0.cc
technique/program/signal/: BUILD  signal_kill.cc
technique/program/signal2/: BUILD  main.cc
technique/qt/: BUILD  example.cc
technique/signal-handler/: BUILD  rough-impl.cc  with-folly.cc  with-glog.cc
technique/typename/: typename.h
tools/clang-analyzer/tutorial/: Earthfile
(+42 files in other folders)
